# python-openhab-logsaver

./: README.md  setup.cfg
python_openhab_logsaver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
