[bdist_wheel]
universal = 0

[metadata]
name = python-openhab-logsaver
version = 1.0.0
description = Save openHAB logs into a database. 
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael Dörflinger
author_email = michaeldoerflinger93@gmail.com
url = https://github.com/Michdo93/python-openhab-logsaver
license = MIT License
download_url = https://github.com/Michdo93/python-openhab-logsaver
project_urls =
    Bug Tracker = https://github.com/Michdo93/python-openhab-logsaver/issues
    Documentation = https://github.com/Michdo93/python-openhab-logsaver/blob/main/README.md
    Source Code = https://github.com/Michdo93/python-openhab-logsaver
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords =
    openHAB

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
python_requires = >=3.5
install_requires =
    mariadb>=1.0.10
